@@ -1,3 +1,6 @@
+[B]1.3.1[/B]
+- Refined radio list function to avoid creating duplicates
+
 [B]1.3.0[/B]
 - Removed screenshots
 - Developer's picks are now inserted to "All stations" menu item as well
